--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "serverstart": "cross-env DEBUG=inventory_application:* npm run devstart"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "http-errors": "~1.6.3",
     "mongoose": "^8.1.3",
     "morgan": "~1.9.1",
